tests/resources/valid/error/raise_check.py
def f(x):
    if x > 0:
        raise Err("asdf")
    else:
        10

f(10)
